--- a/main.tex
+++ b/main.tex
@@ -205,7 +205,7 @@ The same in English.
 %1.4  Уточненные требования к работе
 %<Окончательная постановка задачи выпускной работы с учетом проведенного анализа)>
 
-\section{Основы теории нелинейных волн}
+\section{Нелинейные волновые процессы}
 Изучение нелинейных волновых процессов является важной научной задачей, берущей начало ещё в XIX веке в связи с исследованием волн, возникающих на поверхности воды. С тех пор нелинейные волны были обнаружены во многих других физических системах, имеющих самую различную природу, а исследования в этой области ведутся и по сей день. Для описания нелинейных волновых явлений была сформирована единая теория, систематическому изложению которой посвящено множество книг, например,~\cite{Dodd}, \cite{Ablowitz}, \cite{Ablowitz2011}. Приведём здесь некоторые важные положения, необходимые для дальнейшего изложения.
 
 Исследование нелинейных волн началось в связи с открытием шотландского инженера Дж. Скотта Рассела, наблюдавшего в 1834 году на поверхности канала уединённую волну, бежавшую несколько миль почти без затухания. Впоследствии Рассел неоднократно воспроизводил это явление в экспериментах и определил соотношение между глубиной канала, скоростью и амплитудой этой волны~\cite{Russel}, однако первая математическая модель, описывающая уединённые волны, была получена в работе Ж.~Буссинеска~\cite{Boussinesq} в 1872 году. Уравнение Буссинеска включает в себя помимо линейных волновых членов также нелинейное и дисперсионное слагаемые:
@@ -362,6 +362,8 @@ X. Дай и X. Фан, упростили полные уравнения движения с граничными условиями в ви
 
 
 \section{Численные методы решения нелинейных уравнений}
+
+
 Конечно-разностные схемы для уравнений типа Буссинеска разработаны Христовом, и др. (ссылки).
 
 Мощным инструментом является псевдоспектральный метод (ссылки на Кануто, Готтлиба-Орсага).
