--- a/main.tex
+++ b/main.tex
@@ -36,8 +36,8 @@
 
 % Dots in section titles
 %\renewcommand{\thechapter}{\arabic{chapter}.}
-\renewcommand{\thesection}{\thechapter.\arabic{section}.}
-\renewcommand{\thesubsection}{\thechapter\thesection\arabic{subsection}.}
+%\renewcommand{\thesection}{\thechapter.\arabic{section}.}
+%\renewcommand{\thesubsection}{\thesection.\arabic{subsection}.}
 
 % Smaller chapter title
 \usepackage{titlesec}
@@ -48,8 +48,8 @@
 {\bfseries\Large}%
 %\titleformat*{\section}{\thesection \Large}
 %\titleformat{\section}{}{}{\normalfont\bfseries}{\thesection}
-\titleformat{\section}{\bfseries\large}{\thesection}{.5em}{}
-\titleformat{\subsection}{\bfseries}{\thesection}{.5em}{}
+\titleformat{\section}{\bfseries\large}{\thesection.}{.5em}{}
+\titleformat{\subsection}{\bfseries}{\thesubsection.}{.5em}{}
 
 \titlespacing*{\chapter}{0pt}{0pt}{40pt}
 
@@ -960,19 +960,19 @@ e_{tt} - \left(c^2 + \kappa\frac{\beta_1}{\rho}\right) e_{xx} &- \frac{2}{\rho}\
 \begin{equation}
 p^2 = \frac{\rho \omega^2}{\lambda + 2\mu} - k^2, \quad q^2 = \frac{\rho \omega^2}{\mu} - k^2.
 \end{equation}
-Все модели достаточно хорошо описывают нижнюю ветвь дисперсионной кривой, соответствующую длинным продольным волнам. Уравнение Самсонова-Порубова \eqref{eq_dim_SP} обладает коротковолновой неустойчивостью, в то время как остальные три модели не имеют такого эффекта. Отметим, что коротковолновая неустойчивость затрудняет выполнять численный счёт, поскольку высокие гармоники в таком случае могут неограниченно возрастать. Полученные в настоящей работе уравнения \eqref{eq_dim_free_surf} в отличие от уравнения Островского-Сутина \eqref{eq_dim_OS} улавливают вторую ветвь дисперсионной кривой.
-Уравнение (\ref{eq_dim_free_surf}, $i=2$) лучше описывает нижнюю ветвь для коротких волн, в то время как (\ref{eq_dim_free_surf}, $i=1$) обладает лучшими дисперсионными свойствами как длинноволновая модель.
-%All models reasonably well describe the lowest branch of the dispersion curves for the long waves. Eq. (\ref{eq_dim_SP})  suffers from a short-wave instability, while other three models do not have this defect. Eq. (\ref{eq_dim_free_surf}) for $i=1,2$, capture the presence of the second branch. We also note that, at least in this example, eq. (\ref{eq_dim_free_surf}) for $i=1$ has better dispersive properties than eq. (\ref{eq_dim_free_surf}) for $i=2$ (as a long-wave model). However, eq. (\ref{eq_dim_free_surf}) for $i=2$ better describes the lowest branch in the short wave region. 
-%One can expect that both derived Boussinesq-type models in (\ref{eq_dim_free_surf}) can be useful, depending on the type of the dominant dispersive radiation in the problem under study. One could also try to artificially ``optimise" the dispersive properties as discussed, for example, in \cite{PAT, ADKM}. However, in this paper we were interested in the ``natural" derivation of Boussinesq-type models.
-
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.75\linewidth]{Fig2}
+	\includegraphics[width=0.8\linewidth]{Fig2}
 	\caption{Дисперсионные кривые для стержня радиуса $R = 10^{-2} m$, сделанного из полистирола, упругие модули которого приведены в таблице~\ref{tab:ps}. %Here, the dispersion curves are as follows: exact (Pochhammer-Chree) dispersion curves are shown by black thin solid  lines, eq. \ref{eq_dim_OS} -- green dotted line, eq. \ref{eq_dim_SP} -- red dashed line, eq. \ref{eq_dim_free_surf} ($i=1$) -- blue thick solid lines, eq. \ref{eq_dim_free_surf} ($i=2$) -- purple dotted-dashed lines, respectively. 
 	}
 	\label{fig:disp}
 \end{figure}
+
+Все модели достаточно хорошо описывают нижнюю ветвь дисперсионной кривой, соответствующую длинным продольным волнам. Уравнение Самсонова-Порубова \eqref{eq_dim_SP} обладает коротковолновой неустойчивостью, в то время как остальные три модели не имеют такого эффекта. Отметим, что коротковолновая неустойчивость затрудняет выполнять численный счёт, поскольку высокие гармоники в таком случае могут неограниченно возрастать. Полученные в настоящей работе уравнения \eqref{eq_dim_free_surf} в отличие от уравнения Островского-Сутина \eqref{eq_dim_OS} улавливают вторую ветвь дисперсионной кривой.
+Уравнение (\ref{eq_dim_free_surf}, $i=2$) лучше описывает нижнюю ветвь для коротких волн, в то время как (\ref{eq_dim_free_surf}, $i=1$) обладает лучшими дисперсионными свойствами как длинноволновая модель.
+%All models reasonably well describe the lowest branch of the dispersion curves for the long waves. Eq. (\ref{eq_dim_SP})  suffers from a short-wave instability, while other three models do not have this defect. Eq. (\ref{eq_dim_free_surf}) for $i=1,2$, capture the presence of the second branch. We also note that, at least in this example, eq. (\ref{eq_dim_free_surf}) for $i=1$ has better dispersive properties than eq. (\ref{eq_dim_free_surf}) for $i=2$ (as a long-wave model). However, eq. (\ref{eq_dim_free_surf}) for $i=2$ better describes the lowest branch in the short wave region. 
+%One can expect that both derived Boussinesq-type models in (\ref{eq_dim_free_surf}) can be useful, depending on the type of the dominant dispersive radiation in the problem under study. One could also try to artificially ``optimise" the dispersive properties as discussed, for example, in \cite{PAT, ADKM}. However, in this paper we were interested in the ``natural" derivation of Boussinesq-type models.
 
 
 Все четыре уравнения (\ref{eq_dim_free_surf}, $i=1,2$), \eqref{eq_dim_SP} и \eqref{eq_dim_OS} имеют семейство солитонных решений (см. Приложение 1):
@@ -980,19 +980,19 @@ p^2 = \frac{\rho \omega^2}{\lambda + 2\mu} - k^2, \quad q^2 = \frac{\rho \omega^
 e_i(x,t) = A\ {\rm sech}^2\ \left[B_{i} \left(x\pm t \sqrt{c^2+\frac{A \beta_1}{3 \rho}}\right) \right], \quad i = \overline {1,4},
 \end{equation}
 где амплитуда $A$ является свободным параметром. Для заданной амплитуды $A$, соответствующие солитонные решения имеют одинаковую скорость, но разные параметры ширины $B_i$:
-\begin{eqnarray}
+\begin{align}
 %\label{B1}
 %B_1 &=& \sqrt{\frac{3 A\beta c^2 \rho}{\left[18 c^4  \nu^2 \rho^2 + 6A\beta c^2  \nu^2  \rho - A^2 \beta^2 (\nu+1)\right] R^2}} \, ,\\
 \label{Bi}
-B_i &=& \sqrt{\frac{3A\beta_1 E}{-4\left[(A\beta_1 + 3E)^2\alpha_1^{(i)} + 3E(A\beta_1 + 3E)\alpha_2^{(i)} + 9E^2\alpha_3^{(i)}\right] R^2}} \, , \quad i=1,2,\\
+B_i &= \sqrt{\frac{3A\beta_1 E}{-4\left[(A\beta_1 + 3E)^2\alpha_1^{(i)} + 3E(A\beta_1 + 3E)\alpha_2^{(i)} + 9E^2\alpha_3^{(i)}\right] R^2}} \, , \quad i=1,2,\\
 \label{B3}
-B_3 &=& \sqrt{\frac{A\beta_1}{\left[6\nu E + 2 A \beta_1 (\nu - 1)\right] \nu R^2}}\, , \\
+B_3 &= \sqrt{\frac{A\beta_1}{\left[6\nu E + 2 A \beta_1 (\nu - 1)\right] \nu R^2}}\, , \\
 \label{B4}
-B_4 &=& \sqrt{\frac{A\beta_1}{(6E + 2A\beta_1)\nu^2 R^2}},
-\end{eqnarray}
+B_4 &= \sqrt{\frac{A\beta_1}{(6E + 2A\beta_1)\nu^2 R^2}},
+\end{align}
 для уравнений \eqref{eq_dim_free_surf}, \eqref{eq_dim_SP} и \eqref{eq_dim_OS} соответственно.
 
-На рисунке \ref{fig:soliton} в левой части изображены четыре солитона, задаваемых формулами (\ref{soliton}) -- (\ref{B4}) и имеющих амплитудный параметр $A = -0.05$ (упругие модули полистирола). Видно, что все четыре солитона имеют разную длину, причём <<регуляризованный>> солитон (\ref{B4}) самый длинный. Однако такая амплитуда солитона деформации превышает предел текучести для полистирола и, следовательно, на практике недостижима. В экспериментах с полистироловым стержнем, описанных в~\cite{Garbuzov}, амплитуда очень мала: $A \sim 10^{-3} - 10^{-4}$. Следовательно, в главном порядке по $A$ во всех четырёх формулах параметр длины примерно равен
+На рисунке \ref{fig:soliton} в левой части изображены четыре солитона, задаваемых формулами (\ref{soliton}) -- (\ref{B4}) и имеющих амплитудный параметр $A = -0.07$ (упругие модули полистирола). Видно, что все четыре солитона имеют разную длину, причём <<регуляризованный>> солитон (\ref{B4}) самый длинный. Однако такая амплитуда солитона деформации превышает предел текучести для полистирола и, следовательно, на практике недостижима. В экспериментах с полистироловым стержнем, описанных в~\cite{Garbuzov}, амплитуда очень мала: $A \sim 10^{-3} - 10^{-4}$. Следовательно, в главном порядке по $A$ во всех четырёх формулах параметр длины примерно равен
 %In the left part of the Figure \ref{fig:soliton} we plot the four solitons given by the formulae (\ref{soliton}) - (\ref{B4}) for one and the same value of the amplitude parameter $A = -0.05$ and the same elastic moduli shown in Table \ref{tab:ps} (typical for a polystyrene \cite{HughesKelly}). We can see that the four solitons have a different width, with the regularised soliton (\ref{B4}) being the widest. However, this figure is plotted for the value of $A$ which exceeds the yield point for the polystyrene, and therefore in practice this difference would not be important for that particular material (but could be important for some other materials). Indeed, in experiments with polystyrene discussed in the next section the value of $A$ is very small, $A \sim 10^{-3} - 10^{-4}$. Therefore, to leading order in $A$, all four formulae will give the width parameter approximately equal to 
 \begin{equation}\label{}
 B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
@@ -1002,7 +1002,7 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 	\centering
 	\includegraphics[width=0.54\linewidth]{Fig3a}
 	\includegraphics[width=0.42\linewidth]{Fig3b}
-	\caption{Солитоны в стержне радиуса $R = 10^{-2} m$, сделанном из полистирола при $A = -0.05$ (слева) и $A= -0.001$ (справа). Упругие модули полистирола в таблице~\ref{tab:ps}.}
+	\caption{Солитоны в стержне радиуса $R = 10^{-2} m$, сделанном из полистирола при $A = -0.07$ (слева) и $A= -0.001$ (справа). Упругие модули полистирола в таблице~\ref{tab:ps}.}
 	\label{fig:soliton}
 \end{figure}
 
@@ -1018,24 +1018,22 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 			\hline
 		\end{tabular}
 	\end{center}
-	\caption{Elastic moduli of the polystyrene (PS)~\cite{HughesKelly}.}
+	\vspace{-5mm}
+	\caption{Упругие модули полистирола~\cite{HughesKelly}.}
 	\label{tab:ps}
 \end{table} 
 
 Репараметризуем солитонное решение \eqref{soliton} через скорость $v$ вместо амплитуды $A$:
-\begin{equation}%\label{}
-e_i(x, t) = \frac{3 \rho \left(v^2 - c^2\right)}{\beta_1} {\rm sech}^{2}\left[\tilde{B_i}(x\pm v t)\right], \qquad v = \sqrt{c^2+\frac{A\beta_1}{3 \rho}} \, ,
-\end{equation}
-где
-\begin{eqnarray}
+\begin{align}%\label{}
+e_i(x, t) &= \frac{3 \rho \left(v^2 - c^2\right)}{\beta_1} {\rm sech}^{2}\left[\tilde{B_i}(x\pm v t)\right], \qquad v = \sqrt{c^2+\frac{A\beta_1}{3 \rho}} \, ,\\
 \label{Bimod}
 %\tilde{B}_1 &=& \sqrt{\frac{c^2(v^2- c^2)}{(2(\nu^2+\nu+1) c^2 v^2 - (\nu+1)(c^4+v^4))R^2}} \, ,\\
-\tilde{B}_i &=& \sqrt{\frac{c^2(v^2- c^2)}{-4\left(\alpha_1^{(i)} v^4 + \alpha_2^{(i)} c^2 v^2 + \alpha_3^{(i)}c^4\right)R^2}} \, , \quad i =1,2,\\
+\tilde{B}_i &= \sqrt{\frac{c^2(v^2- c^2)}{-4\left(\alpha_1^{(i)} v^4 + \alpha_2^{(i)} c^2 v^2 + \alpha_3^{(i)}c^4\right)R^2}} \, , \quad i =1,2,\\
 \label{B3mod}
-\tilde{B}_3 &=& \sqrt{\frac{v^2- c^2}{2\nu R^2 [c^2 - (1 - \nu) v^2 ]}} \, ,\\
+\tilde{B}_3 &= \sqrt{\frac{v^2- c^2}{2\nu R^2 [c^2 - (1 - \nu) v^2 ]}} \, ,\\
 \label{B4mod}
-\tilde{B}_4 &=& \sqrt{\frac{v^2- c^2}{2\nu^2 v^2 R^2}} \, .
-\end{eqnarray}
+\tilde{B}_4 &= \sqrt{\frac{v^2- c^2}{2\nu^2 v^2 R^2}} \, .
+\end{align}
 %$$ B = \sqrt{\frac{3c^2(v^2- c^2)}{4((1+\nu+\nu^2) c^2 v^2 - (1+\nu)(c^4+v^4))H^2}} $$
 %Regularized:
 %\begin{equation}%\label{}
