First numerical results

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 %% !TeX encoding = windows-1251
-% !TeX encoding = UTF-8
-% !TeX spellcheck = russian-aot
+%!TeX TS-program = xelatex
+%!TeX encoding = UTF-8
+%!TeX spellcheck = russian-aot
 \documentclass[12pt, a4paper]{report}
 
 % Basic packages
@@ -1067,7 +1068,8 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 \end{table}
 
 Репараметризуем солитонное решение \eqref{soliton} через скорость $v$ вместо амплитуды $A$:
-\begin{align}%\label{}
+\begin{align}
+\label{soliton_v}
 e_i(x, t) &= \frac{3 \rho \left(v^2 - c^2\right)}{\beta_1} {\rm sech}^{2}\left[\tilde{B_i}(x\pm v t)\right], \qquad v = \sqrt{c^2+\frac{A\beta_1}{3 \rho}} \, ,\\
 \label{Bimod}
 %\tilde{B}_1 &=& \sqrt{\frac{c^2(v^2- c^2)}{(2(\nu^2+\nu+1) c^2 v^2 - (\nu+1)(c^4+v^4))R^2}} \, ,\\
@@ -1150,19 +1152,39 @@ e_{tt} - c^2 e_{xx} - \frac{2}{\rho}\left[\nu P_{xx} + \frac1R T_x\right] - \lef
 \begin{flalign}
 \label{3_ic_u}
 &\qquad U_0 (x, r) = A_0 W \erf\lb \frac{x - L/2}{W}\rb,&  &\dot{U}_0 (x, r) = -c \pdiff{U_0}{x}&\\
+\label{3_ic_v}
 &\qquad V_0(x, r) = -\nu r \pdiff{U_0}{x},& &\dot{V}_0 (x, r) = -c \pdiff{V_0}{x}&
 \end{flalign}
-На рис. ... представлена эволюция этого импульса и зарождение солитона при $A_0=0.05$, $W=20$, где по горизонтальной оси отложена бегущая координата $\xi = x - ct$.
+На рисунке~\ref{fig:evol_compar1} слева изображена эволюция этого импульса и зарождение солитона при $A_0=0.01$, $W=20$. Исходный импульс испускает некоторые осцилляции и отрывается от них, что согласуется с моделью Буссинеска, согласно которой солитон имеет большую скорость, чем линейные волны. На рисунке справа представлено сравнение оторвавшегося импульса (<<экспериментального>> солитона) с <<теоретическим>> солитонном \eqref{soliton_v}. Если скорость теоретического солитона, являющуюся свободным параметром в \eqref{soliton_v}, подобрать так, чтобы она совпадала со скоростью экспериментального солитона, то последний имеет почти ту же длину, что и теоретический, но на 6\% большую амплитуду.
 
-Сравним оторвавшийся импульс с солитонным решением уравнения \eqref{eq_dim_free_surf}:
+Теперь решим аналогичную задачу Коши для регуляризованного уравнения типа Буссинеска, где начальное условие задано формулой:
+\begin{flalign}
+\label{3_bq_ic}
+&\qquad u_0 (x) = 2A_0 \exp\lb \frac{(x - L/2)^2}{W^2}\rb,&  &\dot{u}_0 (x) = -c \pdiff{u_0}{x}.&
+\end{flalign}
+Отметим, что уравнение Буссинеска записано относительно функции $u = U_{x}$, а выражение поперечного перемещения $V$ через продольное $U$ уже <<вшито>> в модель.
+На рисунке~\ref{fig:evol_compar2} представлено сравнение эволюции импульса согласно полным уравнениям и согласно модели Буссинеска.
+Обе модели имеют качественно одинаковый результат, однако модель Буссинеска в этом эксперименте дала солитон на 8\% большей амплитуды, и, как следствие, отрывающийся от солитона в полной модели.
 
-Теперь решим аналогичную задачу Коши для регуляризованного уравнения типа Буссинеска, где начальное условие задано формулой \eqref{3_ic_u} (выражение поперечного перемещения $V$ через продольное $U$ уже <<зашито>> в модель).
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.49\linewidth]{figures/wires}
+	\includegraphics[width=0.49\linewidth]{figures/sol_compar}
+	\caption{Слева: решение задачи Коши с начальными условиями \eqref{3_ic_u}, \eqref{3_ic_v} для полных уравнений. На графике изображены профили продольной деформации в центре стержня ($r=0$) в различные моменты времени:~$-U_x(x - ct, 0, t)$. Справа: сравнение профиля <<экспериментального>> солитона, полученного в численном эксперименте, и <<теоретического>> солитона \eqref{soliton_v}. Скорость теоретического солитона $v$ подобрана так, чтобы она совпадала со скоростью экспериментального.}
+	\label{fig:evol_compar1}
+\end{figure}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.6\linewidth]{figures/evol_compar2}
+	\caption{Сравнение решений задачи Коши~\eqref{3_ic_u}, \eqref{3_ic_v} для полной модели и задачи Коши~\eqref{3_bq_ic} для модели типа Буссинеска.}
+	\label{fig:evol_compar2}
+\end{figure}
 
-На рис. ... представлено сравнение эволюции импульса согласно полным уравнениям и согласно модели типа Буссинеска.
-
-На основе численных решений задачи Коши для полных уравнений с начальными импульсами разной амплитуды построим <<экспериментальную>> зависимость скорости/длины от амплитуды образовавшегося солитона и сравним её с теоретической, задаваемой формулой ...
+На основе численных решений задачи Коши для полных уравнений с начальными импульсами разной амплитуды можно построить <<экспериментальную>> зависимость скорости / длины от амплитуды образовавшегося солитона и сравнить её с <<теоретической>>, задаваемой формулой \eqref{soliton_v}. Эти зависимости изображены на рисунке ... 
 
 \subsection{Образование солитона из удара по торцу стержня}
+В предыдущем параграфе моделирование волн проводилось в стержне со свободной от напряжений поверхностью, однако представляет интерес изучение волн, вызываемых внешним воздействием, например, ударом по торцу стержня. Эти результаты могут быть полезны для того, чтобы экспериментально  
+
 Модель типа Буссинеска строилась для бесконечного стержня, следовательно, она применима для описания волн только вдали от торцов стержня. Моделирование волн вблизи торцов возможно с помощью полных уравнений движения. На рис. ... представлены результаты 
 
 \subsection{Образование солитона из бегущего по поверхности напряжения}
