--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,3 @@
-%% !TeX encoding = windows-1251
 %!TeX TS-program = xelatex
 %!TeX encoding = UTF-8
 %!TeX spellcheck = russian-aot
@@ -44,10 +43,6 @@
 	urlcolor={blue!50!black},
 }
 
-% Dots in table of contents
-\usepackage{tocloft}
-\renewcommand{\cftchapleader}{\cftdotfill{\cftdotsep}} % for chapters
-
 %\mathtoolsset{showonlyrefs=true}
 
 % Dots in section titles
@@ -77,6 +72,9 @@
 
 \titlespacing*{\chapter}{0pt}{0pt}{40pt}
 
+% Dots in table of contents
+\usepackage{tocloft}
+\renewcommand{\cftchapleader}{\cftdotfill{\cftdotsep}} % for chapters
 
 % Graphics path for figures
 \graphicspath{{figures/}}
@@ -1188,13 +1186,13 @@ $$
 \subsection{Полные трёхмерные уравнения}
 Разрабатывая численный метод для решения полных уравнений, мы задались целью сделать его пригодным для как можно более широкого круга численных экспериментов. Во-первых, метод должен подходить для моделирования эволюции некоторого начального импульса (решение задачи Коши на периодическом интервале). Во-вторых, должна быть возможность моделировать волны, возникающие в результате внешнего воздействия, как на боковую поверхность, так и на торец стержня (решение начально-краевой задачи на некотором конечном, но достаточно длинном интервале). В третьих, мы хотели бы учитывать в будущем не только осесимметричную деформацию, т.е. случай, когда перемещение зависит от угловой координаты $\varphi$.
 
-Для того, чтобы выполнить поставленные цели, мы реализовали метод с возможностью выбора различных базисов для разных координат (например, базис Фурье для $x$ и базис Лежандра для $r$). Для возможности моделирования уравнений в длинных стержнях с высокой точностью без рассмотрения гармоник или полиномов большой степени, мы реализовали многодоменный метод, позволяющий разбить область по осевой координате на несколько подобластей (доменов). Например, если нужно иметь 1000 точек коллокации по оси $x$, то, чтобы избежать учёт полиномов 1000-й степени, можно разбить область на 50 подобластей и на каждой подобласти использовать полиномы до 20-й степени.
+Для того, чтобы выполнить поставленные цели, мы реализовали метод с дискретизацией по всем трём координатам. Для возможности моделирования уравнений в длинных стержнях с высокой точностью без рассмотрения гармоник или полиномов большой степени, мы реализовали многодоменный метод, позволяющий разбить область по осевой координате на несколько подобластей (доменов). Например, если нужно иметь 1000 точек коллокации по оси $x$, то, чтобы избежать учёт полиномов 1000-й степени, можно разбить область на 50 подобластей и на каждой подобласти использовать полиномы до 20-й степени. {\color{red} Поправить вводную часть после описания экспериментов}
 
 Опишем метод подробнее. Пусть имеется однородный стержень круглого сечения длиной $L$ и радиусом $R$.
 Выпишем полные уравнения движения, граничные и начальные условия в векторном виде:
 \begin{align}
 \label{3_eqns_full}
-&\ddot{\vect{U}}(x, r, \varphi, t) = \frac1\rho \nabla\cdot\tens{P},\quad L_1<x<L_2, \quad 0<r<R, \quad 0<\varphi<2\pi,\\
+&\ddot{\vect{U}}(x, r, \varphi, t) = \frac1\rho \nabla\cdot\tens{P},\quad 0<x<L, \quad 0<r<R, \quad 0<\varphi<2\pi,\\
 \label{3_bc_full}
 &\tens{P} \cdot \vect{n} = \vect{P_b}, \quad r = R,\\
 %&\vect{U}\big|_{x=0} = \vect{U}\big|_{x=L},\\
@@ -1206,21 +1204,23 @@ $$
 &\tens{E} = \frac12 \lb \nabla\vect{U}^T + \nabla\vect{U} + \nabla\vect{U}^T \cdot \nabla\vect{U} \rb,
 \end{align}
 где $\tens{E}^*$ -- союзная матрица, а $\tens{\mathcal{I}}$ -- единичный тензор.
-Будем искать решение этой задачи в некотором конечномерном пространстве, задаваемым системой базисных функций $\Phi_n(x), \Psi_m(r), \Theta_l(\varphi)$. Представляя приближённое решение $\vect{U}_{NML}$ в спектральном виде и требуя, чтобы приближённое решение совпадало с точным в точках коллокации, получаем:
+Разобьём область задачи на несколько доменов вдоль оси $x$ и на каждом домене будем искать решение в некотором конечномерном пространстве, задаваемым системой базисных функций $\Phi_{n_1}(x), \Psi_{n_2}(r), \Theta_{n_3}(\varphi)$. Представим приближённое решение на $i$-м домене $\vect{U}_{N}^{(i)}$ в спектральном виде и потребуем, чтобы приближённое решение совпадало с точным в точках коллокации:
 \begin{align}
 \label{3_spect_approx_full}
-&\vect{U}_{NML}(x,r,\varphi,t) = \sum_{n,m,l} \vect{\widehat{U}}(n,m,l,t) \Phi_n(x) \Psi_m(r) \Theta_l(\varphi),\\
+&\vect{U}_{N}^{(i)}(x,r,\varphi,t) = \sum_{n_1,n_2,n_3} \vect{\widehat{U}}^{(i)}(n_1,n_2,n_3,t) \Phi_{n_1}(x) \Psi_{n_2}(r) \Theta_{n_3}(\varphi),\\
 \label{3_pseudo_sp_approx_full}
 \begin{split}
-&\vect{U}_{NML}(x_i, r_j, \varphi_k, t) = \vect{U}(x_i, r_j, \varphi_k, t), \quad i=0,\dots, N-1, \quad j=0,\dots, M-1,\\
-&\hspace{70mm}l=0,\dots, L-1.
+&\vect{U}_{N}^{(i)}(x_{j_1}, r_{j_2}, \varphi_{j_3}, t) = \vect{U}(x_{j_1}, r_{j_2}, \varphi_{j_3}, t), \quad j_1 = 0,\dots, N_1-1, \quad j_2 = 0,\dots, N_2-1,\\
+&\hspace{72.5mm} j_3 = 0,\dots, N_3-1.
 \end{split}
 \end{align}
-Подстановка \eqref{3_spect_approx_full} в уравнения \eqref{3_eqns_full} приводит к системе дифференциальных уравнений второго порядка относительно $\vect{\widehat{U}}$.
+Подстановка \eqref{3_spect_approx_full} в уравнения \eqref{3_eqns_full} приводит к системе ОДУ второго порядка относительно $\vect{\widehat{U}}^{(i)}$ на каждом из доменов:
+\begin{equation}\label{3_ode_domain}
+\vect{\ddot{\widehat U}}_{N,k}^{(i)} = F_{k}^{(i)}(\vect{\widehat U}_{N,k_0}, \dots, \vect{\widehat U}_{N,k_N}), \quad k = k_0, \dots, k_N.
+\end{equation}
+Здесь $k$ -- мультииндекс: $k = (j_1,j_2,j_3)$, $k_0=(0,0,0)$, $k_N = (N_1-1,N_2-1,N_3-1)$, а также использовано обозначение: $\vect{\widehat U}_{N,j_1,j_2,j_3}^{(i)} = \vect{\widehat U}_{N}^{(i)}(x_{j_1}, r_{j_2}, \varphi_{j_3}, t)$. Следующая задача -- сшивка доменов. 
 
-Из уравнений \eqref{3_eqns_full}, \eqref{3_stress}, \eqref{3_strain} следует, что для реализации псевдоспектрального метода требуется реализовать операции дивергенции и градиента на заданной сетке в цилиндрических координатах.
-
-Для обработки нелинейных слагаемых необходимо иметь быстрое преобразование для перехода из физического пространства (пространства функций, заданных своими значениями на сетке) в пространство ...
+Для обработки нелинейных слагаемых необходимо иметь быстрое преобразование для перехода из физического пространства (пространства функций, заданных своими значениями на сетке) в спектральное пространство...
 
 
 
